--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ float:top-right;
 <img src ="download (3) - Copy.jpg" height="100"><br><b> Nagendra babu</b> 
 </div><br><br>
 
-<div class ="wifes">  <h2> wifes :</h2> <br>
+<div class ="wifes">  <h2> spouse :</h2> <br>
   <img src ="Pawan Kalyan-707997.jpg" height="100" ><br><b>Nandhini <br><br><br>
 <img src = "renudesai-6 - Copy.jpg" height="100"> <br><b>Renu desai  </b><br><br><br>
 <img src ="Pawan-Kalyan-Anna-Lezhneva-2.jpg" height="100"> <br> <b> Anna  Lezhneva</b>
